Fix context menu render problem between context menu and item count, the context menu did behind the item count

--- a/ui/pages/storage/css/storage.less
+++ b/ui/pages/storage/css/storage.less
@@ -473,7 +473,7 @@ body {
     flex-wrap: wrap;
     position: absolute;
     padding-left: 10px;
-    z-index: 0;
+    z-index: 100000;
     background: transparent;
 
     ul {
